// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should render character counter correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <Label
      as="label"
      className=""
      htmlFor="formname"
      isGroupHeader={false}
    >
      display
    </Label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        id="formname"
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
      <div
        className="input-help"
      >
        <span
          className="text-area-input__counter"
        >
          0/300 tekens
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should render character counter with value correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <Label
      as="label"
      className=""
      htmlFor="formname"
      isGroupHeader={false}
    >
      display
    </Label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        id="formname"
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
      <div
        className="input-help"
      >
        <span
          className="text-area-input__counter"
        >
          4/300 tekens
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should render correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <Label
      as="label"
      className=""
      htmlFor="formname"
      isGroupHeader={false}
    >
      display
    </Label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        id="formname"
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
    </div>
  </div>
</div>
`;
